# usrp-playground

./: .env  .env.example  .gitignore  0  README.md  client.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run-daemon.sh  setup-daemons.sh  start-daemons.sh  start.sh  stop-daemons.sh  wrapper.py
.github/workflows/: build-client.yml  build-server.yml
db/: init.sql
demo/python/: api_tour.ipynb  feature_tour.py  main.ipynb  mimo_cli.ipynb  mimo_crosstalk.ipynb  testbench.ipynb
demo/stresstest/: stresstest.py
deploy/: install-daemons-service.sh  usrp-daemon-agent.service  usrp-daemons.service
entrypoint/: Dockerfile  admin_router.py  auth.py  database.py  email_sender.py  inventory.py  main.py  models.py  server_state.py  settings_store.py  token_gen.py
nginx/: Dockerfile  nginx.conf.template
nginx/html/: benchmark.html  dashboard.html  docs.html  docs.md  email_template.txt  index.html  inventory.html  logs.html  settings.html  status.html  users.html
nginx/html/css/: styles.css
nginx/html/js/: app.js  benchmark.js  chip_input.js  unit_input.js
usrp_benchmark/: __init__.py  cli.py  client.py
usrp_playground/: cli.py  client.py
usrp_testbed_library/: daemon_agent.py  endpoints.py  inventory_helper.py  mimo_format.py  pyproject.toml  rx_daemon.py  tx_daemon.py  usrp_common.py  usrp_daemon.py
worker/: channel.py  models.py  worker.py
