[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usrp-playground"
version = "0.1.0"
description = "Client library for the USRP Playground"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "websockets>=12.0",
]

[project.scripts]
usrp-client = "usrp_benchmark.cli:main"

[tool.setuptools.packages.find]
include = ["usrp_benchmark*"]
