[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usrp-playground"
version = "2.0.0"
description = "Client library for the USRP Benchmark System"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "websockets>=12.0",
]

[project.scripts]
usrp-client = "usrp_playground.cli:main"

[tool.setuptools.packages.find]
include = ["usrp_playground*", "usrp_benchmark*"]
